--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -578,7 +578,7 @@ spec:
       - jsonPath: .status.macAddress
         name: Mac
         type: string
-      - jsonPath: .spec.type
+      - jsonPath: .status.type
         name: Type
         type: string
       - jsonPath: .status.ready
@@ -591,6 +591,8 @@ spec:
             status:
               type: object
               properties:
+                type:
+                  type: string
                 ready:
                   type: boolean
                 v4Ip:
