--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@ dist/images/kube-ovn-cmd
 dist/images/kube-ovn-webhook
 dist/windows/kube-ovn.exe
 dist/windows/kube-ovn-daemon.exe
-test/e2e/ovnnb_db.*
-test/e2e/ovnsb_db.*
+ovnnb_db.*.backup
+ovnsb_db.*.backup
+**/kubectl-ko-log/*
 kube-ovn.yaml
 kube-ovn-crd.yaml
 ovn.yaml
