fix: ovneip print column and finalizer (#2593)
* fix: ovneip print column and finalizer

---------

Co-authored-by: yl4811 <yl4811@yealink.com>
Co-authored-by: bobz965 <jmdxjsjgcxy@gmail.com>

--- a/kubeovn-helm/templates/kube-ovn-crd.yaml
+++ b/kubeovn-helm/templates/kube-ovn-crd.yaml
@@ -848,7 +848,7 @@ spec:
       - jsonPath: .status.macAddress
         name: Mac
         type: string
-      - jsonPath: .spec.type
+      - jsonPath: .status.type
         name: Type
         type: string
       - jsonPath: .status.ready
@@ -861,6 +861,8 @@ spec:
             status:
               type: object
               properties:
+                type:
+                  type: string
                 ready:
                   type: boolean
                 v4Ip:
