ci: fix multus installation (#2622)
Multus now requires a Kubernetes CNI plugin has been installed first.
This patch fixes occasional multus installation failure.

--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -957,10 +957,7 @@ jobs:
           sudo cp -r /root/.kube/ ~/.kube/
           sudo chown -R $(id -un). ~/.kube/
 
-      - name: Install Multus
-        run: make kind-install-multus
-
-      - name: Install Kube-OVN
+      - name: Install Multus and Kube-OVN
         run: make kind-install-lb-svc
 
       - name: Run E2E
