--- a/kubeovn-helm/templates/ovn-CR.yaml
+++ b/kubeovn-helm/templates/ovn-CR.yaml
@@ -42,6 +42,8 @@ rules:
       - vpc-dnses/status
       - switch-lb-rules
       - switch-lb-rules/status
+      - qos-policies
+      - qos-policies/status
     verbs:
       - "*"
   - apiGroups:
