--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -139,7 +139,7 @@ kube-ovn-lb-svc-conformance-e2e:
 
 .PHONY: iptables-vpc-nat-gw-conformance-e2e
 iptables-vpc-nat-gw-conformance-e2e:
-	ginkgo build ./test/e2e/iptables-vpc-nat-gw
+	ginkgo build $(E2E_BUILD_FLAGS) ./test/e2e/iptables-vpc-nat-gw
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
