--- a/kubeovn-helm/templates/kube-ovn-crd.yaml
+++ b/kubeovn-helm/templates/kube-ovn-crd.yaml
@@ -1787,6 +1787,7 @@ spec:
                   not:
                     enum:
                       - int
+                      - external
             spec:
               type: object
               properties:
