--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -182,6 +182,8 @@ spec:
                   type: array
                   items:
                     type: string
+                externalSubnet:
+                  type: string
                 tolerations:
                   type: array
                   items:
@@ -557,6 +559,8 @@ spec:
                 natGwDp:
                   type: string
                 qosPolicy:
+                  type: string
+                externalSubnet:
                   type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -1682,6 +1686,8 @@ spec:
                 enableLb:
                   type: boolean
                 enableEcmp:
+                  type: boolean
+                external:
                   type: boolean
   scope: Cluster
   names:
