ci: fix scheduled vpc nat gateway e2e (#2692)
* ci: fix scheduled vpc nat gateway e2e

* ci: bump various versions

--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -10,7 +10,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  HELM_VERSION: v3.11.1
+  HELM_VERSION: v3.11.3
   SUBMARINER_VERSION: '0.14.3'
 
 jobs:
@@ -751,7 +751,7 @@ jobs:
         run: make kube-ovn-lb-svc-conformance-e2e
 
   kubevirt-e2e:
-    name: Kubevirt vm E2E
+    name: Kubevirt VM E2E
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     strategy:
@@ -1273,39 +1273,19 @@ jobs:
         run: sh dist/images/cleanup.sh
 
   iptables-vpc-nat-gw-conformance-e2e:
-    name: Iptables vpc nat gw E2E
-    needs:
-      - build-kube-ovn
-      - build-vpc-nat-gateway
-      - build-e2e-binaries
+    name: Iptables VPC NAT Gateway E2E
     runs-on: ubuntu-22.04
     timeout-minutes: 10
+    strategy:
+      fail-fast: false
+      matrix:
+        branch:
+          - master
     steps:
       - uses: actions/checkout@v3
-
-      - name: Create the default branch directory
-        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
-        run: mkdir -p test/e2e/source
-
-      - name: Check out the default branch
-        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.repository.default_branch }}
-          fetch-depth: 1
-          path: test/e2e/source
-
-      - name: Export E2E directory
-        run: |
-          if [ '${{ github.base_ref || github.ref_name }}' = '${{ github.event.repository.default_branch }}' ]; then
-            echo "E2E_DIR=." >> "$GITHUB_ENV"
-          else
-            echo "E2E_DIR=test/e2e/source" >> "$GITHUB_ENV"
-          fi
-
       - uses: actions/setup-go@v4
         with:
-          go-version-file: ${{ env.E2E_DIR }}/go.mod
+          go-version-file: go.mod
           check-latest: true
           cache: false
 
@@ -1313,13 +1293,23 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache/restore@v3
+        uses: actions/cache@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
-          key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
+          key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles('**/go.sum') }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
+
+      - name: Create branch directory
+        run: mkdir -p test/e2e/kube-ovn/branches/${{ matrix.branch }}
+
+      - name: Check out branch
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ matrix.branch }}
+          fetch-depth: 1
+          path: test/e2e/kube-ovn/branches/${{ matrix.branch }}
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -1327,25 +1317,10 @@ jobs:
           install_only: true
 
       - name: Install ginkgo
-        working-directory: ${{ env.E2E_DIR }}
         run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
-      - name: Download kube-ovn image
-        uses: actions/download-artifact@v3
-        with:
-          name: kube-ovn
-
-      - name: Download vpc-nat-gateway image
-        uses: actions/download-artifact@v3
-        with:
-          name: vpc-nat-gateway
-
-      - name: Load images
-        run: |
-          docker load -i kube-ovn.tar
-          docker load -i vpc-nat-gateway.tar
-
       - name: Create kind cluster
+        working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: |
           sudo pip3 install j2cli
           sudo pip3 install "j2cli[yaml]"
@@ -1354,48 +1329,33 @@ jobs:
           sudo chown -R $(id -un). ~/.kube/
 
       - name: Install Kube-OVN
-        run: make kind-install
+        working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
+        run: |
+          version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
+          docker pull kubeovn/kube-ovn:$version
+          docker pull kubeovn/vpc-nat-gateway:$version
+          VERSION=$version make kind-install
 
       - name: Install vpc-nat-gw
         run: make kind-install-vpc-nat-gw
 
       - name: Run E2E
-        working-directory: ${{ env.E2E_DIR }}
         run: make iptables-vpc-nat-gw-conformance-e2e
 
   ovn-vpc-nat-gw-conformance-e2e:
-    name: Ovn vpc nat gw E2E
-    needs:
-      - build-kube-ovn
-      - build-e2e-binaries
+    name: OVN VPC NAT Gateway E2E
     runs-on: ubuntu-22.04
     timeout-minutes: 10
+    strategy:
+      fail-fast: false
+      matrix:
+        branch:
+          - master
     steps:
       - uses: actions/checkout@v3
-
-      - name: Create the default branch directory
-        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
-        run: mkdir -p test/e2e/source
-
-      - name: Check out the default branch
-        if: (github.base_ref || github.ref_name) != github.event.repository.default_branch
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.repository.default_branch }}
-          fetch-depth: 1
-          path: test/e2e/source
-
-      - name: Export E2E directory
-        run: |
-          if [ '${{ github.base_ref || github.ref_name }}' = '${{ github.event.repository.default_branch }}' ]; then
-            echo "E2E_DIR=." >> "$GITHUB_ENV"
-          else
-            echo "E2E_DIR=test/e2e/source" >> "$GITHUB_ENV"
-          fi
-
       - uses: actions/setup-go@v4
         with:
-          go-version-file: ${{ env.E2E_DIR }}/go.mod
+          go-version-file: go.mod
           check-latest: true
           cache: false
 
@@ -1403,13 +1363,23 @@ jobs:
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
 
       - name: Go cache
-        uses: actions/cache/restore@v3
+        uses: actions/cache@v3
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
-          key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
+          key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles('**/go.sum') }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
+
+      - name: Create branch directory
+        run: mkdir -p test/e2e/kube-ovn/branches/${{ matrix.branch }}
+
+      - name: Check out branch
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ matrix.branch }}
+          fetch-depth: 1
+          path: test/e2e/kube-ovn/branches/${{ matrix.branch }}
 
       - name: Install kind
         uses: helm/kind-action@v1
@@ -1417,19 +1387,10 @@ jobs:
           install_only: true
 
       - name: Install ginkgo
-        working-directory: ${{ env.E2E_DIR }}
         run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
 
-      - name: Download kube-ovn image
-        uses: actions/download-artifact@v3
-        with:
-          name: kube-ovn
-
-      - name: Load images
-        run: |
-          docker load -i kube-ovn.tar
-
       - name: Create kind cluster
+        working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: |
           sudo pip3 install j2cli
           sudo pip3 install "j2cli[yaml]"
@@ -1438,8 +1399,11 @@ jobs:
           sudo chown -R $(id -un). ~/.kube/
 
       - name: Install Kube-OVN
-        run: make kind-install
+        working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
+        run: |
+          version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
+          docker pull kubeovn/kube-ovn:$version
+          VERSION=$version make kind-install
 
       - name: Run E2E
-        working-directory: ${{ env.E2E_DIR }}
         run: make ovn-vpc-nat-gw-conformance-e2e
