--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -176,6 +176,10 @@ spec:
                   type: string
                 subnet:
                   type: string
+                externalSubnets:
+                  items:
+                    type: string
+                  type: array
                 vpc:
                   type: string
                 selector:
@@ -554,6 +558,10 @@ spec:
                   type: string
                 natGwDp:
                   type: string
+                externalSubnets:
+                  items:
+                    type: string
+                  type: array
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
