add routeTable in the yaml files of crd

--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -1228,6 +1228,26 @@ spec:
                         type: string
                     type: object
                   type: array
+                routeTables:
+                  properties:
+                    name:
+                      type: string
+                    routes:
+                      items:
+                        properties:
+                          policy:
+                            type: string
+                          cidr:
+                            type: string
+                          nextHopIP:
+                            type: string
+                          ecmpMode:
+                            type: string
+                          bfdId:
+                            type: string
+                        type: object
+                      type: array
+                  type: object
               type: object
             status:
               properties:
@@ -1683,6 +1703,8 @@ spec:
                   type: boolean
                 enableEcmp:
                   type: boolean
+                routeTable:
+                  type: string
   scope: Cluster
   names:
     plural: subnets
