add route table option in static route for subnet

--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -1230,6 +1230,8 @@ spec:
                         type: string
                       bfdId:
                         type: string
+                      routeTable:
+                        type: string
                     type: object
                   type: array
                 policyRoutes:
@@ -1709,6 +1711,8 @@ spec:
                   type: boolean
                 enableEcmp:
                   type: boolean
+                routeTable:
+                  type: string
   scope: Cluster
   names:
     plural: subnets
