feat: natgw qos

--- a/yamls/ovn-ha.yaml
+++ b/yamls/ovn-ha.yaml
@@ -17,6 +17,7 @@ rules:
       - vpcs
       - vpcs/status
       - vpc-nat-gateways
+      - vpc-nat-gateways/status
       - subnets
       - subnets/status
       - ips
