--- a/charts/templates/ovn-CR.yaml
+++ b/charts/templates/ovn-CR.yaml
@@ -11,6 +11,7 @@ rules:
       - vpcs
       - vpcs/status
       - vpc-nat-gateways
+      - vpc-nat-gateways/status
       - subnets
       - subnets/status
       - ips
