--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -1418,27 +1418,24 @@ spec:
       - name: V4IP
         type: string
         jsonPath: .status.v4ip
-      - name: PV4IP
-        type: string
-        jsonPath: .spec.parentV4ip
       - name: Mac
         type: string
         jsonPath: .status.mac
-      - name: PMac
-        type: string
-        jsonPath: .spec.parentMac
       - name: V6IP
         type: string
         jsonPath: .status.v6ip
-      - name: PV6IP
+      - name: PMac
         type: string
-        jsonPath: .spec.parentV6ip
+        jsonPath: .spec.parentMac
       - name: Subnet
         type: string
         jsonPath: .spec.subnet
       - jsonPath: .status.ready
         name: Ready
         type: boolean
+      - jsonPath: .status.type
+        name: Type
+        type: string
       schema:
         openAPIV3Schema:
           type: object
@@ -1446,6 +1443,8 @@ spec:
             status:
               type: object
               properties:
+                type:
+                  type: string
                 ready:
                   type: boolean
                 v4ip:
@@ -1483,6 +1482,8 @@ spec:
                 namespace:
                   type: string
                 subnet:
+                  type: string
+                type:
                   type: string
                 attachSubnets:
                   type: array
